--- a/Skillcorner_API_First.ipynb
+++ b/Skillcorner_API_First.ipynb
@@ -1433,9 +1433,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07d312be-5862-49eb-836a-f3865be41ec0",
+   "metadata": {},
+   "source": [
+    "### Competitions allowed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c4b8c8ce-b6bd-487b-b2aa-75a1d6ba56f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "competitions = client.get_competitions(params={'user':'true','component_permission_for':'tracking'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "0653cee1-8309-4c25-8c28-48d2c01f24e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#competitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "46f62b8a-b1be-4645-961a-ff96b5ce7888",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "competitions_editions = client.get_competition_editions(params={'competition_id': 181,'user':'true', 'component_permission_for':'tracking'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "ab2bb4b5-a34d-4b03-bfaa-b6bf3f6048c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#competitions_editions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34146889-0c11-4b7c-a413-fbeaffb1c8eb",
+   "metadata": {},
+   "source": [
+    "### List of matches allowed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5c9344cd-5724-4c72-a373-dd1bf1a9f6da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches = client.get_matches(params={'competition_id': 181,'user':'true', 'component_permission_for':'tracking'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "864096b9-9ef1-400a-b9a4-70bd160a2b96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#matches"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30ecc4f2-44a6-4b4f-b4d5-8796d52d35fd",
+   "id": "9400d7ba-328d-456f-81b3-62c987ea24f5",
    "metadata": {},
    "outputs": [],
    "source": []
