download the file into a jsonl

--- a/Skillcorner_API_First.ipynb
+++ b/Skillcorner_API_First.ipynb
@@ -1500,18 +1500,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "id": "864096b9-9ef1-400a-b9a4-70bd160a2b96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1612245,\n",
+       "  'date_time': '2024-06-11T18:00:00Z',\n",
+       "  'home_team': {'id': 367, 'short_name': 'Saudi Arabia'},\n",
+       "  'away_team': {'id': 645, 'short_name': 'Jordan'},\n",
+       "  'status': 'not_started'},\n",
+       " {'id': 1612246,\n",
+       "  'date_time': '2024-06-06T17:30:00Z',\n",
+       "  'home_team': {'id': 645, 'short_name': 'Jordan'},\n",
+       "  'away_team': {'id': 2226, 'short_name': 'Tajikistan'},\n",
+       "  'status': 'not_started'},\n",
+       " {'id': 1612247,\n",
+       "  'date_time': '2024-03-26T19:00:00Z',\n",
+       "  'home_team': {'id': 645, 'short_name': 'Jordan'},\n",
+       "  'away_team': {'id': 3033, 'short_name': 'Pakistan'},\n",
+       "  'status': 'not_started'}]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3509e93-66fd-4d01-9fb1-771d266c058f",
+   "metadata": {},
+   "source": [
+    "### Data for a given match"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c578619-cede-431b-8c7c-4adc3a35ea52",
+   "metadata": {},
+   "source": [
+    "Saves the data into a jsonl file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "45c21110-de63-4a72-83de-e125f3441637",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#matches"
+    "client.save_match_tracking_data(match_id=matches[0]['id'],filepath=str(matches[0]['id'])+'.jsonl')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9400d7ba-328d-456f-81b3-62c987ea24f5",
+   "id": "6f5b3dea-31ea-4ad1-86d3-bfe54ca1dce1",
    "metadata": {},
    "outputs": [],
    "source": []
