types of data in the match data json file

--- a/Skillcorner_API_First.ipynb
+++ b/Skillcorner_API_First.ipynb
@@ -2618,7 +2618,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2b4b8128-65b2-4daa-a4fb-e44f307fb6d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "5254d6a9-3e9e-400c-8f1f-224f1165b12a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['id', 'home_team_score', 'away_team_score', 'date_time', 'stadium', 'home_team', 'home_team_kit', 'away_team', 'away_team_kit', 'home_team_coach', 'away_team_coach', 'competition_edition', 'competition_round', 'referees', 'players', 'status', 'home_team_side', 'ball', 'pitch_length', 'pitch_width'])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match_data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "3636494a-9af1-4be0-8017-37873fb7728c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id :  int\n",
+      "home_team_score :  int\n",
+      "away_team_score :  int\n",
+      "date_time :  str\n",
+      "stadium :  dict\n",
+      "home_team :  dict\n",
+      "home_team_kit :  dict\n",
+      "away_team :  dict\n",
+      "away_team_kit :  dict\n",
+      "home_team_coach :  dict\n",
+      "away_team_coach :  dict\n",
+      "competition_edition :  dict\n",
+      "competition_round :  dict\n",
+      "referees :  list\n",
+      "players :  list\n",
+      "status :  str\n",
+      "home_team_side :  list\n",
+      "ball :  dict\n",
+      "pitch_length :  int\n",
+      "pitch_width :  int\n"
+     ]
+    }
+   ],
+   "source": [
+    "# types of data\n",
+    "for k,v in match_data.items():\n",
+    "    print(k+\" : \",type(v).__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "829b926e-1e20-4911-b2b4-433ec4a6545d",
    "metadata": {},
    "outputs": [],
    "source": []
