--- a/Skillcorner_API_First.ipynb
+++ b/Skillcorner_API_First.ipynb
@@ -1500,37 +1500,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 80,
    "id": "864096b9-9ef1-400a-b9a4-70bd160a2b96",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': 1612245,\n",
-       "  'date_time': '2024-06-11T18:00:00Z',\n",
-       "  'home_team': {'id': 367, 'short_name': 'Saudi Arabia'},\n",
-       "  'away_team': {'id': 645, 'short_name': 'Jordan'},\n",
-       "  'status': 'not_started'},\n",
-       " {'id': 1612246,\n",
-       "  'date_time': '2024-06-06T17:30:00Z',\n",
-       "  'home_team': {'id': 645, 'short_name': 'Jordan'},\n",
-       "  'away_team': {'id': 2226, 'short_name': 'Tajikistan'},\n",
-       "  'status': 'not_started'},\n",
-       " {'id': 1612247,\n",
-       "  'date_time': '2024-03-26T19:00:00Z',\n",
-       "  'home_team': {'id': 645, 'short_name': 'Jordan'},\n",
-       "  'away_team': {'id': 3033, 'short_name': 'Pakistan'},\n",
-       "  'status': 'not_started'}]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "matches[:3]"
+    "#matches[:3]"
    ]
   },
   {
